# Tokenizer1

./: .gitignore  README.md  pyproject.toml
src/mini_tiktokenizer/: bpe.py  cli.py  io.py  regex_split.py
src/mini_tiktokenizer_nico.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_roundtrip.py
